Switch horizontal scrollbar to table rather than table container; initial fix for table width

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ td span.pupilNumbersFlagged {
 }
 
 /* Tables */
+table {
+	width: 100px;
+}
+
 th.rotate{
   height: 160px;
   width: 40px;
